# NB-N-gram

./: .gitignore  README.md  backend.py  pyproject.toml  requirements.txt  totals.json
src/nb_n_gram/: app.py  backend.py
