[project]
name = "nb-n-gram"
version = "0.1.0"
description = "A trend viewer that shows you the development of word frequencies in the digitized material at the National Library of Norway."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dhlab>=2.40.0",
    "fastapi>=0.115.3",
    "flask>=3.0.3",
]
